--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = "1.0.98"
 bytemuck = "1.22.0"
 image = "0.25.6"
+ndarray = "0.16.1"
 thiserror = "2.0.12"
 tokio = { version = "1.44.2", features = ["full"] }
 wgpu = "25.0.0"
